--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.3.0",
     "@zeit/next-sass": "^1.0.1",
     "next": "13.5.6",
     "react": "^18",
