--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@tabler/icons-react": "^3.3.0",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.6",
     "@testing-library/user-event": "^14.5.2",
     "@zeit/next-sass": "^1.0.1",
     "next": "13.5.6",
@@ -22,6 +20,8 @@
     "sass": "^1.76.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -33,6 +33,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
