--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["jest", "@testing-library/jest-dom"],  // Added types for Jest and jest-dom
+    "types": ["jest", "@testing-library/jest-dom"],  
     "plugins": [
       {
         "name": "next"
@@ -28,6 +28,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "jest.setup.js"  ],
   "exclude": ["node_modules"]
 }
