--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-spring/web": "^9.7.3",
     "@tabler/icons-react": "^3.3.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react-window": "^1.8.8",
     "@zeit/next-sass": "^1.0.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-window": "^1.8.10",
     "sass": "^1.76.0"
   },
   "devDependencies": {
