--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^3.3.0",
     "@testing-library/user-event": "^14.5.2",
     "@zeit/next-sass": "^1.0.1",
+    "focus-trap-react": "^10.2.3",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
